--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -2,6 +2,10 @@
   margin-top: 20px;
 }
 
+.section-list-header {
+  font-size: 32px;
+}
+
 @media (min-width: 768px) {
   .homepage-columns {
     flex-direction: row-reverse;
