Extract data in separate file. Changed item styling

--- a/src/components/UsefulInfo/styles.scss
+++ b/src/components/UsefulInfo/styles.scss
@@ -1,7 +1,5 @@
 
-.list-items-grid {
-  display: grid;
-  grid-row: auto;
-  grid-gap: 30px;
+.useful_info-wrapper{
+  margin-bottom: 30px;
   padding-right: 30px;
 }
