--- a/src/components/UsefulInfo/styles.scss
+++ b/src/components/UsefulInfo/styles.scss
@@ -2,3 +2,10 @@
   margin-bottom: 30px;
   padding-right: 30px;
 }
+
+.overview {
+   display: -webkit-box;
+   -webkit-box-orient: vertical;
+   -webkit-line-clamp: 2;
+   overflow: hidden;
+}
