--- a/src/components/UsefulInfoDetails/components/List/styles.scss
+++ b/src/components/UsefulInfoDetails/components/List/styles.scss
@@ -1,13 +1,15 @@
-li {
+.list {
+  li {
     list-style-type: none;
     position: relative;
     padding-left: 15px;
-}
+  }
 
-li:before {
+  li:before {
     content: "\25BA \0020";
     font-size: 10px;
     position: absolute;
     top: 7px;
     left: -25px;
+  }
 }
