--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -5,22 +5,22 @@ $warning: #ffdd57;
 .container {
   padding-right: 1.25rem;
   padding-left: 1.25rem;
+
+  p {
+    margin-bottom: 1rem;
+  }
 }
 
 .__social-share-container {
   margin-bottom: 1.6rem;
 }
 
-.box {
-  padding: 1.25rem;
+.has-border-bottom {
+  border-bottom: 1px solid #e5e5e5;
+}
 
-  &__warning {
-    background-color: $warning;
-  }
-
-  &__info {
-    background-color: hsla(204, 86%, 53%, 0.1);
-  }
+.has-vertical-paddding {
+  padding: 50px 0;
 }
 
 .pl--lg {
