Add privacy and terms page. Refactor and fix.

--- a/frontend/src/components/HelpForm/styles.scss
+++ b/frontend/src/components/HelpForm/styles.scss
@@ -6,6 +6,10 @@
   height: 50px;
 }
 
+.level.action-buttons .level-right {
+  display: none;
+}
+
 .result-msg {
   text-align: center;
   color: #888;
